--- a/music game/style.css
+++ b/music game/style.css
@@ -3,17 +3,62 @@
     padding: 0;
 }
 
+.startBtn {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 240px;
+    height: 60px;
+    background: #b92b27;
+    /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #1565C0, #b92b27);
+    /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #1565C0, #b92b27);
+    /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    color: white;
+    border-radius: 15px;
+    border: 1px solid white;
+    transform-origin: center;
+}
+
+.startBtn:hover {
+    background: -webkit-linear-gradient(to left, #1565C0, #b92b27);
+    /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to left, #1565C0, #b92b27);
+}
+
 .screen {
     width: 100vw;
     height: 100vh;
     display: flex;
     align-items: center;
     justify-content: center;
-    background: black;
+    background-image: url(./img/music-melody-abstract-4k-jr.jpeg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 #myCanvas {
     box-sizing: border-box;
     background-color: #fee2f8;
     background-image: linear-gradient(315deg, #fee2f8 0%, #dcf8ef 74%);
+/*     animation: identifier 10s linear infinite; */
+}
+
+
+
+/* @keyframes identifier {
+    0% {
+        transform: rotateX(0deg) rotateY(0deg);
+    }
+
+    100% {
+        transform: rotateX(360deg) rotateY(360deg);
+    }
+} */
+
+.btnHidden {
+    display: none;
 }
